# pybind11_cmake_demo

./: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: test_CIBW.yml
demo/: __init__.py  demo.py
src/: demo.cpp  work.h
test/: test_demo.py
